<resources>
    <string name="app_name">Phonecure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_sign_up_xt">Register as User</string>
    <string name="tech_sign_up_xt">Register as service partner</string>
    <string name="facebook_app_id">353765961480835</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="current_name">My postion</string>
    <string name="changedevice_color_txt"><u>Change Device Color</u></string>
    <string name="banner_home_footer">ca-app-pub-5937028232593341/3218372514</string>
    <string name="interstitial_full_screen">ca-app-pub-5937028232593341/3218372514</string>
    <string name="guide_txt">Training &amp; Repair guide</string>
    <string name="addPayment">Add Payment Method</string>
    <string name="addThreeDSecureCard">Add Source</string>
    <string name="addThreeDSecureCardSync">Add Source Rx</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="createAndroidPayTokens">Create Android Pay Tokens</string>
    <string name="createCardTokens">Create Card Tokens</string>
    <string name="createThreeDSecure">Create 3DS Sources</string>
    <string name="cardNumber">Card Number</string>
    <string name="createSource">Creating source&#8230;</string>
    <string name="confirmPayment">Confirm payment details</string>
    <string name="changeDetails">Change payment details</string>
    <string name="pollingSource">Polling for source changes&#8230;</string>
    <string name="save">Save</string>
    <string name="saverx">Save Rx</string>
    <string name="saveService">Save with Service</string>
    <string name="selectSampleActivity">Select Payment</string>
    <string name="startPolling">Start polling</string>
    <string name="tryThreeDSecure">Try 3DS</string>
    <string name="verify">Verify</string>
    <string name="updatedSources">Source results</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
    <string name="label_source_type">Type</string>
    <string name="label_3ds_status">3DS status</string>
    <string name="label_source_state">Status</string>
    <string name="label_source_id">ID Last 6</string>
    <string name="sample_card_requiring_3ds">4000 0000 0000 3063</string>
    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forgot_text">Forgot Password</string>
    <string name="account_not">Don\'t have an account? </string>
    <string name="forgot_text_info">You can retrieve a new password \nby entering your e-mail address</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="or">Or use</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_acc">Already have an account? </string>
    <string name="vat">VAT number</string>
    <string name="org">Organization</string>
    <string name="address">Address</string>
    <string name="no_of_emp">Number of employees</string>
    <string name="reg">Register</string>
    <string name="shop">Shop</string>
    <string name="ind">Individual</string>
    <string name="home_cap">HOME</string>
    <string name="share_cap">SHARE</string>
    <string name="my_orders_cap">MY APPOINTMENTS</string>
    <string name="favorite_cap">FAVOURITE</string>
    <string name="privacy_cap">PRIVACY POLICY</string>
    <string name="profile_cap">PROFILE</string>
    <string name="feed_cap">FEEDBACK</string>
    <string name="profile_small">Profile</string>
    <string name="favorite_service_partner">Favourite service partners</string>
    <string name="privacy_small">Privacy Policy</string>
    <string name="current_device">Current Device:</string>
    <string name="select_other_device">SELECT ANOTHER DEVICE</string>
    <string name="message_info"> We currently don’t offer any service \nfor this device. \nYou can send us an e-mail on: devices@curespot.co</string>
    <string name="exit_mes">Do You Want To Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate_partner">Rate Technician the service partner</string>
    <string name="gernal">GENERAL</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="update">Update profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="email_blank">Please enter the e-mail address</string>
    <string name="password_blank">Please enter password</string>
    <string name="email_valid">Please enter a valid e-mail address</string>
    <string name="password_valid">New password and confirmed password are not same</string>
    <string name="name_blank">Please enter name</string>
    <string name="no_of_emp_blank">Please enter number of employees</string>
    <string name="select_device_color_valid">Please select device color to proceed</string>
    <string name="image_valid">Please select a profile image</string>
    <string name="repair_option_valid">Please select repair location options</string>
    <string name="booking_date_time_valid">Please select booking date and time</string>
    <string name="vat_valid">Please enter VAT number</string>
    <string name="address_blank">Please enter address</string>
    <string name="address_valid">Please enter valid address</string>
    <string name="first_name_blank">Please enter first name</string>
    <string name="last_name_blank">Please enter last name</string>
    <string name="phone_no_blank">Please enter a Phone number</string>
    <string name="org_blank">Please enter a Phone number</string>
    <string name="select_working_day">Please select at least one working day</string>
    <string name="service_partner">Service partner</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="devices">Devices</string>
    <string name="services">Services</string>
    <string name="select_model">Select your model and color</string>
    <string name="next">Next</string>
    <string name="search_tech">Find service partners</string>
    <string name="map">Map</string>
    <string name="tech_profile">Service partner profile</string>
    <string name="book_repair">Book a repair</string>
    <string name="no_of_repair">Number of repairs</string>
    <string name="reviews">Reviews</string>
    <string name="repir_point">Repair at service point</string>
    <string name="repir_at_loc">Repair on location</string>
    <string name="working_hours">Working hours</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="time">TIME</string>
    <string name="select_time">Select time</string>
    <string name="book_now">BOOK NOW</string>
    <string name="km_away">Km away</string>
    <string name="cart">Booking summary</string>
    <string name="clear">Clear</string>
    <string name="cart_value">selected service / multiple selected services</string>
    <string name="confirm">Confirm</string>
    <string name="clear_mes">Do You Want To Clear Cart Data?</string>
    <string name="less_then_mes">less then one not allowed</string>
    <string name="additional_address">Additional address for repair</string>
    <string name="total">Total:</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="location_name_valid">Please enter a valid location name</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="always_open">Always Open</string>
    <string name="appointment">Appointments</string>
    <string name="setting">Settings</string>
    <string name="adjust_setting">Adjust settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="tech_assist_info">Technical assistance in repairs</string>
    <string name="add_device">Please add devices</string>
    <string name="device_added">Devices added</string>
    <string name="no_device_added">No device Added</string>
    <string name="services_added">Services added</string>
    <string name="no_services_added">No services Added</string>
    <string name="est_time">Estimate time</string>
    <string name="hours">hours</string>
    <string name="select_the_issue">Select the issue(s)</string>
    <string name="select_colors">Select colors for</string>
    <string name="update_service">Update Service</string>
    <string name="add_service">Add Service</string>
    <string name="mins">mins</string>
    <string name="share_text">Hey, download this app</string>
    <string name="share_small">Share</string>
    <string name="notify">Notifications</string>
    <string name="repair_guide">Training &amp; repair guides</string>
    <string name="search_key">Search by keyword, device name</string>
    <string name="precision_tools">PRECISION TOOLS</string>
    <string name="always_available">ALWAYS AVAILABLE</string>
    <string name="diagnose">Diagnose</string>
    <string name="trained_service">We only want trained repair services</string>
    <string name="invest_txt">that invest in themselves.</string>
    <string name="device_feature_reco">The easy device recognizer feature</string>
    <string name="put_an_end">puts an end to your doubts</string>
    <string name="tech_exp">The technicians are rated by the neighborhood</string>
    <string name="to_take_on">to take on any situation</string>
    <string name="price_blank">Please enter price for this service</string>
    <string name="select_color">Please select at least one color for this service</string>
    <string name="estimated_time_service">Please select estimated time for this service</string>
    <string name="price_above_zero">Please enter price above zero for this service</string>
    <string name="estimated_time_service_valid">Please select valid estimated time for this service</string>
    <string name="add_all_device">Add all devices you are able to repair</string>
    <string name="add_service_model">Add serviceable model(s)</string>
    <string name="set_up_service">Set up service price &amp; service time for all color(s)</string>
    <string name="reset">RESET PASSWORD</string>
</resources>