<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <RelativeLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"


            android:padding="8dp"
            android:src="@drawable/white_back" />

        <TextView
            android:id="@+id/service_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/tech_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/user_back" />


                <ImageView
                    android:id="@+id/camer_click"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/tech_img"
                    android:layout_marginLeft="-50dp"
                    android:layout_toRightOf="@+id/tech_img"

                    android:src="@drawable/cam" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/calender_back"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/name_txt"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/name_ed"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/name"
                        android:textColor="#000"
                        android:textColorHint="#000"
                        android:textSize="@dimen/sab_txt" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#e6e4e4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/email_ed"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:textColor="#000"
                        android:textColorHint="#000"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/sab_txt" />
                </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>



            <TextView
                android:id="@+id/update_profile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/green_btn"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="#fff"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/header_txt"
                android:textStyle="bold"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>