<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:id="@+id/main_layout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/header_view"
        android:background="#000"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="8dp"


            android:layout_alignParentLeft="true"
            android:src="@drawable/white_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/header_view"


        >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6e4e4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#fff"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/first_name"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:background="#fff"/>
        <EditText
            android:id="@+id/first_name_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:textColor="#000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:background="#fff"
            android:textCursorDrawable="@drawable/cursore_color"
            android:paddingLeft="10dp"
            />
            </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e6e4e4"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#fff"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/last_name"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:background="#fff"/>

        <EditText
            android:id="@+id/last_name_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:textColor="#000"
            android:textColorHint="@android:color/darker_gray"
            android:background="#fff"
            android:textCursorDrawable="@drawable/cursore_color"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            />
            </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6e4e4"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e6e4e4"
            android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:background="#fff"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/phone"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:background="#fff"/>

            <EditText
                android:id="@+id/phone_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:hint="@string/phone"
                android:textColor="#000"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#fff"

                android:inputType="number"
                android:textCursorDrawable="@drawable/cursore_color"

                />
        </LinearLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <EditText
            android:id="@+id/city_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="City"
            android:textColor="#000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursore_color"
            android:padding="10dp"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/zip_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Zip"
            android:textColor="#000"
            android:textColorHint="@android:color/darker_gray"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursore_color"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:padding="10dp"/>
    </LinearLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6e4e4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#373737"
            android:text="@string/address"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e6e4e4"
            android:layout_marginTop="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/address"
                android:textColor="#000"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:background="#fff"
                android:textCursorDrawable="@drawable/cursore_color"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:popupBackground="#fff"

                android:id="@+id/address_ed" />
        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6e4e4"/>

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/time_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_btn"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="@dimen/header_txt"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:visibility="gone"
            />
    </LinearLayout>

</RelativeLayout>